Implementation using cards

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+h1 {
+    background: linear-gradient(0.25turn,#002AFF,  #007bff);
+}
+
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
     background-color: #b8daff
